@@ -19,7 +19,7 @@
  */
 
 #include "tclInt.h"
-#include <tclIO.h>
+#include "tclIO.h"
 #include <assert.h>
 
 #ifndef EINVAL
